desktop flickity spacing fixed

--- a/themes/red_amp/style.css
+++ b/themes/red_amp/style.css
@@ -712,7 +712,7 @@ a {
     margin-bottom: 85px; }
   .about-content .team-section .mobile-about-carousel .flickity-viewport {
     width: 100%;
-    max-width: 1139px; }
+    max-width: 1400px; }
   .about-content .team-section .mobile-about-carousel .carousel-cell {
     width: 38%;
     text-align: center; }
